--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -5,14 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <title>My Website</title>
 </head>
 
 <body>
   <main>
     <h1>Welcome to My Website</h1>
+    <p id="demo"></p>
+    <img src="image.png" alt="placeholder image">
   </main>
+  <script src="script.js"></script>
 </body>
 
 </html>
