--- a/templates/about.html
+++ b/templates/about.html
@@ -6,16 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>My Website</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <title>Assembly Webserver</title>
 </head>
 
 <body>
-  <main>
-    <h1>Welcome to My Website</h1>
-    <p id="demo"></p>
-    <img src="image.png" alt="placeholder image">
-  </main>
-  <script src="script.js"></script>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+    </ul>
+  </nav>
 </body>
 
 </html>
