Made http 200 responses a bit easier to add for different MIME types
Basically just moved the "HTTP 200" and "Server: ..." stuff to a
seperate string which is concatenated to the string with the MIME type.
Now if I need to add a MIME type I need to write 2 less lines of code.

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
               $ git clone https://github.com/tathyagarg/webserver.git
               $ cd webserver
               $ mv your-website templates
-              $ echo "/ index.html" > templates/.endpoints
+              $ echo "/ index.html\n" > templates/.endpoints
               $ make</code>
           </div>
 
